// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`D16 motif geometry regression tesamorelin @ 280 — locked snapshot for share card parity 1`] = `
{
  "cx": 140,
  "cy": 140,
  "hash": 2820922562,
  "innerR": 50.4,
  "nodes": [
    {
      "bigDot": false,
      "x": 233.25,
      "x2": 185.78488416610185,
      "y": 140,
      "y2": 152.2680227378595,
    },
    {
      "bigDot": false,
      "x": 218.50520285305936,
      "x2": null,
      "y": 185.325,
      "y2": null,
    },
    {
      "bigDot": true,
      "x": 187.925,
      "x2": null,
      "y": 223.00853495273844,
      "y2": null,
    },
    {
      "bigDot": true,
      "x": 140,
      "x2": 126.48964584564843,
      "y": 234.55,
      "y2": 190.42132813228937,
    },
    {
      "bigDot": false,
      "x": 92.07500000000002,
      "x2": null,
      "y": 223.00853495273844,
      "y2": null,
    },
    {
      "bigDot": false,
      "x": 53.61396597250224,
      "x2": null,
      "y": 189.875,
      "y2": null,
    },
    {
      "bigDot": true,
      "x": 42.849999999999994,
      "x2": 94.21511583389815,
      "y": 140,
      "y2": 127.73197726214052,
    },
    {
      "bigDot": true,
      "x": 53.61396597250226,
      "x2": null,
      "y": 90.12499999999999,
      "y2": null,
    },
    {
      "bigDot": true,
      "x": 92.72499999999997,
      "x2": null,
      "y": 58.117298072181356,
      "y2": null,
    },
    {
      "bigDot": false,
      "x": 139.99999999999997,
      "x2": 153.82093700847457,
      "y": 49.349999999999994,
      "y2": 88.41956087616376,
    },
    {
      "bigDot": true,
      "x": 186.625,
      "x2": null,
      "y": 59.2431310971011,
      "y2": null,
    },
    {
      "bigDot": true,
      "x": 218.50520285305936,
      "x2": null,
      "y": 94.67499999999995,
      "y2": null,
    },
  ],
  "ringR": 95.2,
  "seedRingDash": "4 8",
  "seedRotation": -28,
}
`;

exports[`D16 motif geometry regression tesamorelin @ 200 (in-page default) — locked snapshot 1`] = `
{
  "cx": 100,
  "cy": 100,
  "hash": 2820922562,
  "innerR": 36,
  "nodes": [
    {
      "bigDot": false,
      "x": 166.05,
      "x2": 131.87555226753926,
      "y": 100,
      "y2": 108.54102848838318,
    },
    {
      "bigDot": false,
      "x": 154.94931187012264,
      "x2": null,
      "y": 131.725,
      "y2": null,
    },
    {
      "bigDot": true,
      "x": 134.32500000000002,
      "x2": null,
      "y": 159.45264396980173,
      "y2": null,
    },
    {
      "bigDot": true,
      "x": 100,
      "x2": 90.21664009512472,
      "y": 167.35,
      "y2": 136.5119962337268,
    },
    {
      "bigDot": false,
      "x": 65.67500000000001,
      "x2": null,
      "y": 159.45264396980173,
      "y2": null,
    },
    {
      "bigDot": false,
      "x": 37.16985695543897,
      "x2": null,
      "y": 136.27499999999998,
      "y2": null,
    },
    {
      "bigDot": true,
      "x": 30.049999999999997,
      "x2": 68.12444773246074,
      "y": 100.00000000000001,
      "y2": 91.45897151161681,
    },
    {
      "bigDot": true,
      "x": 37.16985695543898,
      "x2": null,
      "y": 63.724999999999994,
      "y2": null,
    },
    {
      "bigDot": true,
      "x": 66.32499999999997,
      "x2": null,
      "y": 41.67318905511808,
      "y2": null,
    },
    {
      "bigDot": false,
      "x": 99.99999999999999,
      "x2": 110.0939427589983,
      "y": 36.55,
      "y2": 62.328892774726334,
    },
    {
      "bigDot": true,
      "x": 133.025,
      "x2": null,
      "y": 42.79902208003784,
      "y2": null,
    },
    {
      "bigDot": true,
      "x": 154.9493118701226,
      "x2": null,
      "y": 68.27499999999998,
      "y2": null,
    },
  ],
  "ringR": 68,
  "seedRingDash": "4 8",
  "seedRotation": -28,
}
`;

exports[`D16 motif geometry regression bpc-157 @ 280 — distinct fingerprint, locked snapshot 1`] = `
{
  "cx": 140,
  "cy": 140,
  "hash": 3124799010,
  "innerR": 50.4,
  "nodes": [
    {
      "bigDot": false,
      "x": 233.25,
      "x2": 185.78488416610185,
      "y": 140,
      "y2": 152.2680227378595,
    },
    {
      "bigDot": true,
      "x": 218.50520285305936,
      "x2": null,
      "y": 185.325,
      "y2": null,
    },
    {
      "bigDot": false,
      "x": 186.625,
      "x2": null,
      "y": 220.7568689028989,
      "y2": null,
    },
    {
      "bigDot": false,
      "x": 140,
      "x2": 127.42139440801749,
      "y": 230.65,
      "y2": 186.94399515764871,
    },
    {
      "bigDot": false,
      "x": 90.775,
      "x2": null,
      "y": 225.260201002578,
      "y2": null,
    },
    {
      "bigDot": true,
      "x": 60.368964122020856,
      "x2": null,
      "y": 185.975,
      "y2": null,
    },
    {
      "bigDot": true,
      "x": 46.75,
      "x2": 94.21511583389815,
      "y": 140,
      "y2": 127.73197726214052,
    },
    {
      "bigDot": false,
      "x": 59.2431310971011,
      "x2": null,
      "y": 93.375,
      "y2": null,
    },
    {
      "bigDot": false,
      "x": 94.67499999999995,
      "x2": null,
      "y": 61.494797146940655,
      "y2": null,
    },
    {
      "bigDot": true,
      "x": 139.99999999999997,
      "x2": 153.82093700847457,
      "y": 49.349999999999994,
      "y2": 88.41956087616376,
    },
    {
      "bigDot": false,
      "x": 187.925,
      "x2": null,
      "y": 56.991465047261556,
      "y2": null,
    },
    {
      "bigDot": true,
      "x": 219.63103587797912,
      "x2": null,
      "y": 94.02499999999995,
      "y2": null,
    },
  ],
  "ringR": 95.2,
  "seedRingDash": "4 6",
  "seedRotation": -50,
}
`;

exports[`D16 motif geometry regression ss-31 @ 280 — distinct fingerprint, locked snapshot 1`] = `
{
  "cx": 140,
  "cy": 140,
  "hash": 1375365886,
  "innerR": 50.4,
  "nodes": [
    {
      "bigDot": true,
      "x": 238.45,
      "x2": 190.42132813228937,
      "y": 140,
      "y2": 153.51035415435157,
    },
    {
      "bigDot": true,
      "x": 226.38603402749777,
      "x2": null,
      "y": 189.875,
      "y2": null,
    },
    {
      "bigDot": true,
      "x": 189.875,
      "x2": null,
      "y": 226.38603402749774,
      "y2": null,
    },
    {
      "bigDot": true,
      "x": 140,
      "x2": 126.1790629915254,
      "y": 234.55,
      "y2": 191.58043912383624,
    },
    {
      "bigDot": false,
      "x": 93.37500000000001,
      "x2": null,
      "y": 220.75686890289893,
      "y2": null,
    },
    {
      "bigDot": true,
      "x": 59.243131097101084,
      "x2": null,
      "y": 186.625,
      "y2": null,
    },
    {
      "bigDot": false,
      "x": 41.55,
      "x2": 89.57867186771064,
      "y": 140,
      "y2": 126.48964584564841,
    },
    {
      "bigDot": true,
      "x": 60.36896412202087,
      "x2": null,
      "y": 94.02499999999999,
      "y2": null,
    },
    {
      "bigDot": false,
      "x": 93.37499999999996,
      "x2": null,
      "y": 59.24313109710113,
      "y2": null,
    },
    {
      "bigDot": true,
      "x": 139.99999999999997,
      "x2": 152.26802273785947,
      "y": 41.55,
      "y2": 94.21511583389815,
    },
    {
      "bigDot": true,
      "x": 189.875,
      "x2": null,
      "y": 53.61396597250226,
      "y2": null,
    },
    {
      "bigDot": false,
      "x": 226.38603402749771,
      "x2": null,
      "y": 90.12499999999996,
      "y2": null,
    },
  ],
  "ringR": 95.2,
  "seedRingDash": "8 11",
  "seedRotation": 2,
}
`;
